tests/errors/mixed-types-impossible.wit
@x
  - value: 1
x@

@y
  - (if @x.value is "true")
    - then: "yes"
y@
